{
    "version": 1,
    "name": "Inputs",
    "maps": [
        {
            "name": "Playing",
            "id": "8cbdd758-f870-4dd5-882b-2a364aa6ba2f",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "333a6129-d0e2-4a9b-ba17-c9e5f505ab9a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Up-Right",
                    "type": "Button",
                    "id": "1d1d8982-a03a-4603-8d87-41004413bc4a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Down-RIght",
                    "type": "Button",
                    "id": "c0526970-361d-4fdb-8b81-26ce3177159c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "cd425532-340f-4251-9d76-7d39d0a46321",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Down-Left",
                    "type": "Button",
                    "id": "b2e50e12-343e-42e9-a055-24001b5b6666",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Up-Left",
                    "type": "Button",
                    "id": "8330b640-4b2f-40ba-9122-5b204e0190fd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuButton",
                    "type": "Button",
                    "id": "2d795066-291a-457f-a56a-8b5c9ac83175",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetButton",
                    "type": "Button",
                    "id": "20dd1a2a-0df1-433d-b4c2-96e363f17341",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UndoButton",
                    "type": "Button",
                    "id": "90e8bb37-7fb1-4b95-92a0-a0dfa83890e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6524912f-d32c-4e85-8626-010fc420bbbf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "362a1a3e-c5c0-4a86-8a78-0ddbeef9ac7b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up-Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01cf2477-344a-4a29-a5d0-5f2f61ce9c1e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down-RIght",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f89ebeb0-c467-4d62-8639-3aa3249e3909",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22594baa-3005-40a8-bfa4-db7a442e0bd6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down-Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33475fe4-fcf9-41c3-8c51-5ed9493ac63c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up-Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81c0aeac-057e-41ea-b582-b3236b3e573f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c87067a-78eb-4f53-a7d8-4bbf8883da42",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a78a540-9405-4d7c-9300-c621ec214d30",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UndoButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "66a64259-d663-4af5-bd67-cb144dc91a95",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "c6773fc2-8aa0-4ab7-95ef-47786161d530",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Up-Right",
                    "type": "Button",
                    "id": "487951f2-5b11-4d09-8ff5-69a392607d15",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Down-RIght",
                    "type": "Button",
                    "id": "37449c04-e648-45f8-8e41-00a3eb6662a0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "b6ec2367-5828-439b-bfc5-5c50c8f2e2f1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Down-Left",
                    "type": "Button",
                    "id": "f53770a8-4474-4ec3-8724-dc6b6641a6c8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Up-Left",
                    "type": "Button",
                    "id": "14ddea20-906d-4696-99c0-98e08cc94477",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73ef38d3-1d6e-4b1d-a3d9-b77d908864c6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59b6cfcb-4de1-49c9-a68d-2407cd311a95",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5d4c2d0-8620-4e60-9449-359a2595f016",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down-Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72b48a81-116e-4370-98ea-ad95f44f9416",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up-Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d937fb52-f084-4b1e-8945-52c926cebb3e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down-RIght",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dce82a9a-926c-4474-b4fc-b1adefaca2ed",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up-Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}